test/parser/function_decl.dmz
// RUN: (dmz %s -ast-dump 2>&1 || true) | filecheck %s
// CHECK: [[# @LINE + 1 ]]:4: error: expected identifier
fn {}

// CHECK: [[# @LINE + 1 ]]:6: error: expected '('
fn f {}

// CHECK: [[# @LINE + 1 ]]:8: error: expected '->'
fn f() {}

// CHECK: [[# @LINE + 1 ]]:11: error: expected type expression
fn f() -> {}

// CHECK: [[# @LINE + 1 ]]:11: error: expected type expression
fn f() -> 1 {}

// CHECK: [[# @LINE + 1 ]]:16: error: expected function body
fn f() -> void }

fn main() -> validCustomTypeDuringParsing {}
// CHECK: FunctionDecl main -> validCustomTypeDuringParsing
// CHECK-NEXT:   Block
